--- a/RazorCrudDemo-FACIT/Pages/Employees/Create.cshtml
+++ b/RazorCrudDemo-FACIT/Pages/Employees/Create.cshtml
@@ -2,3 +2,37 @@
 @model RazorCrudDemo_FACIT.Pages.Employees.CreateModel
 @{
 }
+
+<h1>CREATE a new Employee</h1>
+
+<form method="post">
+    <div class="mb-3">
+        <label class="form-label">Name</label>
+        <input type="text" class="form-control" />
+    </div>
+
+    <div class="mb-3">
+        <label class="form-label">Email</label>
+        <input type="email" class="form-control" />
+    </div>
+
+    <div class="mb-3">
+        <label class="form-label">Salary</label>
+        <input type="number" class="form-control" />
+    </div>
+
+    <div class="mb-3">
+        <label class="form-label">Date of Birth</label>
+        <input type="date" class="form-control" />
+    </div>
+
+    <div class="mb-3">
+        <label class="form-label">Department</label>
+        <input type="text" class="form-control" />
+    </div>
+
+    <div>
+        <button type="submit" class="btn btn-primary">Save</button>
+    </div>
+</form>
+
