--- a/RazorCrudDemo-FACIT/Pages/Employees/Create.cshtml
+++ b/RazorCrudDemo-FACIT/Pages/Employees/Create.cshtml
@@ -8,27 +8,27 @@
 <form method="post">
     <div class="mb-3">
         <label class="form-label">Name</label>
-        <input type="text" class="form-control" />
+        <input type="text" class="form-control" asp-for="CreateEmployeeRequest.Name"/>
     </div>
 
     <div class="mb-3">
         <label class="form-label">Email</label>
-        <input type="email" class="form-control" />
+        <input type="email" class="form-control" asp-for="CreateEmployeeRequest.Email"/>
     </div>
 
     <div class="mb-3">
         <label class="form-label">Salary</label>
-        <input type="number" class="form-control" />
+        <input type="number" class="form-control" asp-for="CreateEmployeeRequest.Salary"/>
     </div>
 
     <div class="mb-3">
         <label class="form-label">Date of Birth</label>
-        <input type="date" class="form-control" />
+        <input type="date" class="form-control" asp-for="CreateEmployeeRequest.DateOfBirth"/>
     </div>
 
     <div class="mb-3">
         <label class="form-label">Department</label>
-        <input type="text" class="form-control" />
+        <input type="text" class="form-control" asp-for="CreateEmployeeRequest.Department"/>
     </div>
 
     <div>
