--- a/RazorCrudDemo-FACIT/Pages/Employees/Update.cshtml
+++ b/RazorCrudDemo-FACIT/Pages/Employees/Update.cshtml
@@ -2,3 +2,44 @@
 @model RazorCrudDemo_FACIT.Pages.Employees.UpdateModel
 @{
 }
+
+<h1 class="mb3">Update Employee</h1>
+
+<form method="post">
+    @*Id ska INTE editers!*@
+    <div class="mb-3">
+        <label class="form-label">Id (read only)</label>
+        <input type="text" class="form-control" asp-for="UpdateEmployee.Id" readonly />
+    </div>
+
+    <div class="mb-3">
+        <label class="form-label">Name</label>
+        <input type="text" class="form-control" asp-for="UpdateEmployee.Name" />
+    </div>
+
+    <div class="mb-3">
+        <label class="form-label">Email</label>
+        <input type="email" class="form-control" asp-for="UpdateEmployee.Email" />
+    </div>
+
+    <div class="mb-3">
+        <label class="form-label">Salary</label>
+        <input type="number" class="form-control" asp-for="UpdateEmployee.Salary" />
+    </div>
+
+    <div class="mb-3">
+        <label class="form-label">Date of Birth</label>
+        <input type="date" class="form-control" asp-for="UpdateEmployee.DateOfBirth" />
+    </div>
+
+    <div class="mb-3">
+        <label class="form-label">Department</label>
+        <input type="text" class="form-control" asp-for="UpdateEmployee.Department" />
+    </div>
+
+    <div class="mb-3">
+        <button type="submit" class="btn btn-primary">
+            Update
+        </button>
+    </div>
+</form>
