Added Update functionality

--- a/RazorCrudDemo-FACIT/Pages/Employees/Update.cshtml
+++ b/RazorCrudDemo-FACIT/Pages/Employees/Update.cshtml
@@ -9,32 +9,32 @@
     @*Id ska INTE editers!*@
     <div class="mb-3">
         <label class="form-label">Id (read only)</label>
-        <input type="text" class="form-control" asp-for="UpdateEmployee.Id" readonly />
+        <input type="text" class="form-control" asp-for="UpdateEmployeeVM.Id" readonly />
     </div>
 
     <div class="mb-3">
         <label class="form-label">Name</label>
-        <input type="text" class="form-control" asp-for="UpdateEmployee.Name" />
+        <input type="text" class="form-control" asp-for="UpdateEmployeeVM.Name" />
     </div>
 
     <div class="mb-3">
         <label class="form-label">Email</label>
-        <input type="email" class="form-control" asp-for="UpdateEmployee.Email" />
+        <input type="email" class="form-control" asp-for="UpdateEmployeeVM.Email" />
     </div>
 
     <div class="mb-3">
         <label class="form-label">Salary</label>
-        <input type="number" class="form-control" asp-for="UpdateEmployee.Salary" />
+        <input type="number" class="form-control" asp-for="UpdateEmployeeVM.Salary" />
     </div>
 
     <div class="mb-3">
         <label class="form-label">Date of Birth</label>
-        <input type="date" class="form-control" asp-for="UpdateEmployee.DateOfBirth" />
+        <input type="date" class="form-control" asp-for="UpdateEmployeeVM.DateOfBirth" />
     </div>
 
     <div class="mb-3">
         <label class="form-label">Department</label>
-        <input type="text" class="form-control" asp-for="UpdateEmployee.Department" />
+        <input type="text" class="form-control" asp-for="UpdateEmployeeVM.Department" />
     </div>
 
     <div class="mb-3">
