--- a/RazorCrudDemo-FACIT/Pages/Employees/Read.cshtml
+++ b/RazorCrudDemo-FACIT/Pages/Employees/Read.cshtml
@@ -3,7 +3,7 @@
 @{
 }
 
-<h1 class="mb-3">List of Employees</h1>
+<h1 class="mb-3">List of Employees (Total: @Model.Employees.Count)</h1>
 
 @if (Model.Employees != null && Model.Employees.Any())
 {
