Added Create button to Read.cshtml

--- a/RazorCrudDemo-FACIT/Pages/Employees/Read.cshtml
+++ b/RazorCrudDemo-FACIT/Pages/Employees/Read.cshtml
@@ -5,6 +5,11 @@
 
 <h1 class="mb-3">List of Employees (Total: @Model.Employees.Count)</h1>
 
+<a asp-page="Create"
+   class="btn btn-success my-2">
+    Create Employee
+</a>
+
 @if (Model.Employees != null && Model.Employees.Any())
 {
     <table class="table table-striped">
