--- a/RazorCrudDemo-FACIT/Pages/Employees/Read.cshtml
+++ b/RazorCrudDemo-FACIT/Pages/Employees/Read.cshtml
@@ -4,6 +4,7 @@
 }
 
 <h1 class="mb-3">List of Employees (Total: @Model.Employees.Count)</h1>
+<h4>@Model.ShortDate</h4>
 
 <a asp-page="Create"
    class="btn btn-success my-2">
