--- a/RazorCrudDemo-FACIT/Pages/Shared/_Layout.cshtml
+++ b/RazorCrudDemo-FACIT/Pages/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-page="/Index">RazorCrudDemo_FACIT</a>
+                <a class="navbar-brand" asp-area="" asp-page="/Index">Super Crud</a> @*Övning 2*@
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -56,3 +56,4 @@
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
+
