--- a/RazorCrudDemo-FACIT/Pages/Shared/_Layout.cshtml
+++ b/RazorCrudDemo-FACIT/Pages/Shared/_Layout.cshtml
@@ -22,9 +22,10 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
                         </li>
-                        <li class="nav-item">
+                        @*Removed - Övning 3*@
+                        @*<li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
-                        </li>
+                        </li>*@
                         <li class="nav-item">
                             <a class="nav-link text-dark"
                                asp-area=""
