#3a det fanns en till länk till ’Privacy’ i footern. Ta bort den också

--- a/RazorCrudDemo-FACIT/Pages/Shared/_Layout.cshtml
+++ b/RazorCrudDemo-FACIT/Pages/Shared/_Layout.cshtml
@@ -46,7 +46,9 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2022 - RazorCrudDemo_FACIT - <a asp-area="" asp-page="/Privacy">Privacy</a>
+            &copy; 2022 - RazorCrudDemo_FACIT -
+
+            @*<a asp-area="" asp-page="/Privacy">Privacy</a>*@ @*Removed Övning 3b*@
         </div>
     </footer>
 
