#3c Ändra titeln på din app i footern så att det matchar titeln i dn header

--- a/RazorCrudDemo-FACIT/Pages/Shared/_Layout.cshtml
+++ b/RazorCrudDemo-FACIT/Pages/Shared/_Layout.cshtml
@@ -46,8 +46,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2022 - RazorCrudDemo_FACIT -
-
+            &copy; 2022 - Super Crud @*Övning 3c*@
             @*<a asp-area="" asp-page="/Privacy">Privacy</a>*@ @*Removed Övning 3b*@
         </div>
     </footer>
