#4 Lägg till en knapp i Create som länkar tillbaka till Read

--- a/RazorCrudDemo-FACIT/Pages/Employees/Create.cshtml
+++ b/RazorCrudDemo-FACIT/Pages/Employees/Create.cshtml
@@ -40,9 +40,18 @@
         <label class="form-label">Department</label>
         <input type="text" class="form-control" asp-for="CreateEmployeeRequest.Department" />
     </div>
+    
+    @*Övning 4*@
+    <div class="mb-3 d-flex justify-content-left">
+        <div style="width:120px"
+            <button type="submit" class="btn btn-primary">Save</button>
+        </div>
 
-    <div>
-        <button type="submit" class="btn btn-primary">Save</button>
+        <a asp-page="Read"
+           class="btn btn-secondary mx-1"
+           style="width:120px">
+            Back to List
+        </a>
     </div>
 </form>
 
