--- a/RazorCrudDemo-FACIT/Pages/Employees/Update.cshtml
+++ b/RazorCrudDemo-FACIT/Pages/Employees/Update.cshtml
@@ -50,20 +50,21 @@
         <button type="submit"
                 class="btn btn-primary mx-1"
                 style="width:120px">
-            Update
+                <i class="fas fa-save"></i> Save @*Övning 5*@
+
         </button>
 
         <button type="submit"
                 class="btn btn-danger mx-1"
                 style="width:120px"
                 asp-page-handler="Delete">
-            Delete
+                <i class="fas fa-trash"></i> Delete @*Övning 5*@
         </button>
 
         <a asp-page="Read"
            class="btn btn-secondary mx-1"
            style="width:120px">
-            Back to List
+           <i class="fas fa-chevron-circle-left"></i> Back @*Övning 5*@
         </a>
     </div>
 </form>
