--- a/RazorCrudDemo-FACIT/Pages/Employees/Create.cshtml
+++ b/RazorCrudDemo-FACIT/Pages/Employees/Create.cshtml
@@ -40,12 +40,14 @@
         <label class="form-label">Department</label>
         <input type="text" class="form-control" asp-for="CreateEmployeeRequest.Department" />
     </div>
-    
+
     @*Övning 4*@
     <div class="mb-3 d-flex justify-content-left">
-        <div style="width:120px"
-            <button type="submit" class="btn btn-primary">Save</button>
-        </div>
+        <button type="submit"
+                class="btn btn-primary"
+                style="width:120px">
+            Save
+        </button>
 
         <a asp-page="Read"
            class="btn btn-secondary mx-1"
