#6 Gör så att Body element tar upp 85% av höjden på skärmen

--- a/RazorCrudDemo-FACIT/Pages/Shared/_Layout.cshtml
+++ b/RazorCrudDemo-FACIT/Pages/Shared/_Layout.cshtml
@@ -43,8 +43,8 @@
             </div>
         </nav>
     </header>
-    <div class="container">
-        <main role="main" class="pb-3">
+    <div class="container bg"> @*Övning 6*@
+        <main role="main" class="pb-3"> 
             @RenderBody()
         </main>
     </div>
