#7 Change width of columns in table

--- a/RazorCrudDemo-FACIT/Pages/Employees/Read.cshtml
+++ b/RazorCrudDemo-FACIT/Pages/Employees/Read.cshtml
@@ -27,10 +27,10 @@
             @foreach (var emp in Model.Employees)
             {
                 <tr>
-                    <td>@emp.Id</td>
-                    <td>@emp.Name</td>
-                    <td>@emp.Email</td>
-                    <td>
+                    <td width="30%">@emp.Id</td>
+                    <td width="30%">@emp.Name</td>
+                    <td width="30%">@emp.Email</td>
+                    <td width="10%">
                         <a asp-page="Update"
                            asp-route-id="@emp.Id"
                            class="btn btn-primary mx-2">
